# gem_working_group

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  article_structure_1.docx  dispersal.py  init.sh  metabolic_rate_blyth2026.Rmd  pyproject.toml  spatial_food_webs.py  test_spatial.ipynb  tochange.txt
.claude/: settings.json
data/processed/: NPP_NorthAmerica_EqualArea_100km.tif  Tavg_NorthAmerica_EqualArea_100km_month_01.tif  Tavg_NorthAmerica_EqualArea_100km_month_02.tif  Tavg_NorthAmerica_EqualArea_100km_month_03.tif  Tavg_NorthAmerica_EqualArea_100km_month_04.tif  Tavg_NorthAmerica_EqualArea_100km_month_05.tif  Tavg_NorthAmerica_EqualArea_100km_month_06.tif  Tavg_NorthAmerica_EqualArea_100km_month_07.tif  Tavg_NorthAmerica_EqualArea_100km_month_08.tif  Tavg_NorthAmerica_EqualArea_100km_month_09.tif  Tavg_NorthAmerica_EqualArea_100km_month_10.tif  Tavg_NorthAmerica_EqualArea_100km_month_11.tif  Tavg_NorthAmerica_EqualArea_100km_month_12.tif
data/raw/: MOD17A3H_Y_NPP_2025-01-01_rgb_720x360.TIFF
docs/: processes_implementation_specification.md
experiments/: README.md
experiments/atn_model/: ATN_equation_implementation_comparison.md  ATN_model_formulas_parameters.Rmd  ATN_model_spatiotemporal_formulas_parameters.md  ATNr_reproduction_notes.md  README_ATN.md  atn_io.py  atn_model.py  config.py  env_mat.txt  example_adj_mat.txt  example_env_mat.txt  example_traits.txt  process_synthesis_atn.md  reproduce_atnr_figures.py  run_atn.ipynb  run_atn.py  test_atn.py
experiments/notebooks/: GEM.ipynb  (+2 more)
tests/: test_metabolism.py  test_smoke.py  test_vegetation.py
(+288 files in other folders)
