[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gem"
version = "0.0.0"
description = "General Ecosystem Model — prototype by the GEM working group."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "GEM working group" },
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "rasterio",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
